# magicApp

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gl_helper.cpp  gl_helper.h  native-lib.cpp  native-lib.h
app/src/main/java/com/mipt/artem/magicappcamera/: CameraCaptureActivity.java  CameraRenderer.java  OnSurfaceTextureReadyListener.java  SplashActivity.java
app/src/main/java/com/mipt/artem/magicappcamera/gles/: CameraRenderer.java
app/src/main/res/layout/: activity_camera_capture.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
